# dots_and_boxes_ai

./: .gitignore  .ycm_extra_conf.py  3x3_demo.txt  4x4_demo.txt  a.out  asd.cpp  cheet_sheet.txt  init_template.sh  readme
dots_and_boxes/: CMakeLists.txt
dots_and_boxes/include/: a.out  dbg.hpp  dots_and_boxes.hpp  error_code.h  mtcs.hpp
sa_ai_vs_ai/: CMakeLists.txt
sa_ai_vs_ai/source/: main.cpp
sa_tmp/: CMakeLists.txt
sa_tmp/source/: main.cpp
test/: CMakeLists.txt
test/source/: test_hello.cpp
vtune_result/hotspots/1/: 1.vtune
vtune_result/hotspots/1/archive/binaries/[vdso]/9703d677edc6b8195458955b8fa9bbe5/: [vdso]
vtune_result/hotspots/1/archive/binaries/[vdso]/ec18fb51fd539c1c64738f28be13be87/: [vdso]
vtune_result/hotspots/1/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
vtune_result/hotspots/1/data.0/: 331805-331812.0-331812.0.th  331805-331812.0-331812.0.th.aux  331805-331812.0.trace  emon.0.emon  emon.0.emon_cpu  emon.0.emon_events  emon.0.emon_version  sep.events  systemcollector-331805-hlajungo-Predator-PH317-56.sc
vtune_result/hotspots/1/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
vtune_result/hotspots/1/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
vtune_result/hotspots/1/sqlite-db/_cache_grouper_data4_global_data_grouper/grouper/: 0
vtune_result/hotspots/1/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
vtune_result/hotspots/1/sqlite-db/pmu_data/end_tsc/: 0  mapping.xml
vtune_result/hotspots/1/sqlite-db/timelinedb/: directory.xml
vtune_result/hotspots/1/sqlite-db/timelinedb/dbint-1602224530/aggregated/0/: 0  mapping.xml
vtune_result/hotspots/1/sqlite-db/timelinedb/dbint-44589105/instance/0/: 0  mapping.xml
